--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,15 +19,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 1.1: Log in to Docker Hub using a token
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v4
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          token: ${{ secrets.DOCKER_HUB_TOKEN }} 
+
       # 2. Build Image
       - name: Build image
-        run: docker build . -t johnpaulmanoza/coupoun-app-backend:latest .
+        run: | 
+          docker build . -t ${{ secrets.DOCKER_HUB_USERNAME }}/coupoun-app-backend:latest .
         
       # 3. Push Image  
       - name: Push image to DockerHub
         run: |
-          docker login -u johnpaulmanoza -p ${{ secrets.DOCKER_HUB_TOKEN }}
-          docker push johnpaulmanoza/coupoun-app-backend:latest
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/coupoun-app-backend:latest
 
       # 4. Add SSH
       - name: Add SSH key
@@ -54,7 +62,7 @@ jobs:
               fi
 
             # Pull the latest image from Docker Hub
-            docker pull johnpaulmanoza/coupoun-app-backend:latest
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/coupoun-app-backend:latest
 
             # Stop and remove any existing container
             docker stop coupon-app-backend || true
@@ -68,5 +76,5 @@ jobs:
               -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
               -e DB_NAME=${{ secrets.DB_NAME }} \
               -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
-              johnpaulmanoza/coupoun-app-backend:latest
+              ${{ secrets.DOCKER_HUB_USERNAME }}/coupoun-app-backend:latest
           EOF
