--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,22 +19,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 1.1: Log in to Docker Hub using a token
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          registry: docker.io
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          token: ${{ secrets.DOCKER_HUB_TOKEN }} 
-
       # 2. Build Image
       - name: Build image
-        run: | 
-          docker build . -t ${{ secrets.DOCKER_HUB_USERNAME }}/coupoun-app-backend:latest
+        run: docker build . -t ${{ secrets.DOCKER_HUB_USERNAME }}/coupoun-app-backend:latest
         
       # 3. Push Image  
       - name: Push image to DockerHub
         run: |
+          docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_TOKEN }}
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/coupoun-app-backend:latest
 
       # 4. Add SSH
