--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -52,6 +52,13 @@ jobs:
                 sudo usermod -aG docker $USER
               else
                 echo "Docker is already installed."
+                if ! sudo systemctl is-active --quiet docker; then
+                  echo "Docker service is not running. Starting Docker..."
+                  sudo systemctl start docker
+                else
+                  echo "Docker service is already running."
+                fi
+                sudo systemctl enable docker
               fi
 
             # Pull the latest image from Docker Hub
